# msd_robot_arm_2

robot_moveit_config/: .setup_assistant  package.xml
robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  spotarm_assembly.ros2_control.xacro  spotarm_assembly.srdf  spotarm_assembly.urdf.xacro
robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
spotarm_assembly_description/: package.xml  setup.cfg  setup.py
spotarm_assembly_description/launch/: display.launch.py  gazebo.launch.py
spotarm_assembly_description/meshes/: Joint_5_Component_v2_1.stl  base_link.stl
spotarm_assembly_description/urdf/: materials.xacro  spotarm_assembly.gazebo  spotarm_assembly.trans  spotarm_assembly.xacro
stepper_test/: CMakeLists.txt  package.xml
stepper_test/include/stepper_test/: ICLStepper.h
stepper_test/src/: ICLStepper.cpp  motor_key.cpp
